<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Weather icons -->
    <string name="weather_cloudy" translatable="false">&#xf013;</string>
    <string name="weather_cloudy_gusts" translatable="false">&#xf011;</string>
    <string name="weather_day_cloudy" translatable="false">&#xf002;</string>
    <string name="weather_day_haze" translatable="false">&#xf0b6;</string>
    <string name="weather_day_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_dust" translatable="false">&#xf063;</string>
    <string name="weather_fog" translatable="false">&#xf014;</string>
    <string name="weather_hail" translatable="false">&#xf015;</string>
    <string name="weather_hot" translatable="false">&#xf072;</string>
    <string name="weather_hurricane" translatable="false">&#xf073;</string>
    <string name="weather_lightning" translatable="false">&#xf016;</string>
    <string name="weather_night_alt_cloudy" translatable="false">&#xf086;</string>
    <string name="weather_night_clear" translatable="false">&#xf02e;</string>
    <string name="weather_rain" translatable="false">&#xf019;</string>
    <string name="weather_rain_mix" translatable="false">&#xf017;</string>
    <string name="weather_sandstorm" translatable="false">&#xf082;</string>
    <string name="weather_showers" translatable="false">&#xf01a;</string>
    <string name="weather_sleet" translatable="false">&#xf0b5;</string>
    <string name="weather_smoke" translatable="false">&#xf062;</string>
    <string name="weather_snow" translatable="false">&#xf01b;</string>
    <string name="weather_snowflake_cold" translatable="false">&#xf076;</string>
    <string name="weather_sprinkle" translatable="false">&#xf01c;</string>
    <string name="weather_storm_showers" translatable="false">&#xf01d;</string>
    <string name="weather_strong_wind" translatable="false">&#xf050;</string>
    <string name="weather_thunderstorm" translatable="false">&#xf01e;</string>
    <string name="weather_tornado" translatable="false">&#xf056;</string>
    <string name="weather_windy" translatable="false">&#xf021;</string>

    <!-- Settings/Date format -->
    <string name="setting_available_simple_string_codes" translatable="false">yYMwWDdFEuaHkKhmsSzZX</string>
    <string name="setting_example_simple_string" translatable="false">EEEE, d MMM yyyy h:mm:ss a, zzzz</string>

    <!-- Errors -->
    <string name="msg_err_parsing_json">Error parsing JSON.</string>
    <string name="msg_http_error">Error while requesting or receiving data.</string>
    <string name="msg_connection_not_available">Connection not available.</string>
    <string name="msg_city_not_found">Specified city is not found.</string>
    <string name="msg_too_many_requests">Too many requests. Please try again.</string>
    <string name="msg_invalid_api_key">Invalid API key.</string>
    <string name="error_dateFormat" translatable="false">Date Format Error.</string>

    <!-- Location -->
    <string name="settings_title_location">Location</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_settings_message">Location is not enabled. Do you wish to go to the settings menu?</string>
    <string name="location_settings_button">Settings</string>
    <string name="location_search_heading">Locations</string>
    <string name="location_favourite_heading">Favourites</string>
    <string name="perm_title_location">Location Permission</string>
    <string name="perm_temp_location">App requires access to location.</string>
    <string name="perm_perm_location">Redirecting to App Settings to grant Location permission.</string>


    <string name="app_name">WeatherScanner</string>
    <!-- Main activity titles -->
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_favourites">Favourites</string>
    <string name="action_about">About</string>
    <string name="search_title">Search for city</string>
    <string name="downloading_data">Downloading your data ...</string>
    <string name="getting_location">Getting your location ...</string>
    <string name="loading_data">Loading...</string>
    <string name="setting_auto_detect_location">Detect Location</string>

    <!-- Forecast cards -->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="later">Later</string>

    <!-- Main activity headings -->
    <string name="wind">Wind</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>

    <!-- About dialogue -->
    <string name="about_unknown">Could not get version name</string>
    <string name="about_description">A lightweight Weather app.</string>
    <string name="about_src">Code is available at <a href='https://github.com/pranmar93/WeatherScanner'>Github</a>.</string>

    <!-- Settings/Appearance -->

    <!-- Settings/Data -->
    <string name="last_update">Last update:\n</string>
    <string name="settings_title_data">Data</string>
    <string name="setting_refreshInterval">Refresh interval</string>
    <string name="settings_none">None</string>
    <string name="settings_15min">15 min</string>
    <string name="settings_30min">30 min</string>
    <string name="settings_1hour">1 h</string>
    <string name="settings_2hour">2 h</string>
    <string name="settings_6hour">6 h</string>
    <string name="settings_12hour">12 h</string>
    <string name="settings_24hour">24 h</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <!-- Settings/Units -->
    <string name="settings_title_units">Units</string>
    <string name="setting_lengthUnits">Length units</string>
    <string name="setting_speedUnits">Speed units</string>
    <string name="setting_tempUnits">Temperature units</string>
    <string name="setting_pressureUnits">Pressure units</string>

    <string name="setting_unit_mps">Meters per second (m/s)</string>
    <string name="setting_unit_kph">Kilometers per hour (kph)</string>
    <string name="setting_unit_mph">Miles per hour (mph)</string>
    <string name="setting_unit_bft">Beaufort wind scale (bft)</string>
    <string name="setting_unit_kn">Knots (kn)</string>
    <string name="setting_unit_Celsuis">Celsius</string>
    <string name="setting_unit_Fahrenheit">Fahrenheit</string>
    <string name="setting_unit_Kelvin">Kelvin</string>

    <string name="setting_unit_mm">Millimeters (mm)</string>
    <string name="setting_unit_in">Inches (in)</string>

    <string name="setting_unit_hpa">hPa/mBar</string>
    <string name="setting_unit_kpa">kPa</string>
    <string name="setting_unit_mmhg">mm Hg</string>
    <string name="setting_unit_inhg">in Hg</string>

    <!-- Wind direction -->
    <string name="wind_direction_north">N</string>
    <string name="wind_direction_north_north_east">NNE</string>
    <string name="wind_direction_north_east">NE</string>
    <string name="wind_direction_east_north_east">ENE</string>
    <string name="wind_direction_east">E</string>
    <string name="wind_direction_east_south_east">ESE</string>
    <string name="wind_direction_south_east">SE</string>
    <string name="wind_direction_south_south_east">SSE</string>
    <string name="wind_direction_south">S</string>
    <string name="wind_direction_south_south_west">SSW</string>
    <string name="wind_direction_south_west">SW</string>
    <string name="wind_direction_west_south_west">WSW</string>
    <string name="wind_direction_west">W</string>
    <string name="wind_direction_west_north_west">WNW</string>
    <string name="wind_direction_north_west">NW</string>
    <string name="wind_direction_north_north_west">NNW</string>
</resources>