<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/refresh"
        android:title="@string/action_refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/magnify"
        android:title="@string/action_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_location"
        android:icon="@drawable/ic_my_location_24dp"
        android:title="@string/setting_auto_detect_location"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favourites"
        android:title="@string/action_favourites"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/cloud"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
